@@ -1,3 +1,7 @@
+2005-10-28  Rodney Dawes  <dobey@novell.com>
+
+	* legacy-icon-mapping.xml: Add links for cut and copy icons
+
 2005-10-26  Rodney Dawes  <dobey@novell.com>
 
 	* legacy-icon-mapping.xml: Add links to gtk+/gnome stock trash icons
